4/PL/Semántico/y.output
State 127 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 $@1: %empty

    3 bloque: ABRE_LLAVE $@1 declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    4 declar_de_subprogs: declar_de_subprogs declar_subprograma
    5                   | %empty

    6 $@2: %empty

    7 declar_subprograma: cabecera_subprograma $@2 bloque

    8 declar_de_variables_locales: DECLARACION variables_locales FINDECLARACION
    9                            | %empty

   10 variables_locales: variables_locales cuerpo_declar_variables
   11                  | cuerpo_declar_variables

   12 cuerpo_declar_variables: tipo_t lista_id PUNTO_COMA
   13                        | error

   14 lista_id: IDENTIFICADOR
   15         | lista_id COMA IDENTIFICADOR
   16         | lista_id error IDENTIFICADOR

   17 $@3: %empty

   18 cabecera_subprograma: tipo_t IDENTIFICADOR $@3 ABRE_PAREN lista_parametros CIERRA_PAREN

   19 lista_parametros: parametro
   20                 | lista_parametros COMA parametro
   21                 | lista_parametros error IDENTIFICADOR
   22                 | %empty

   23 parametro: tipo_t IDENTIFICADOR

   24 sentencias: sentencias sentencia
   25           | sentencia

   26 sentencia: bloque
   27          | sentencia_asignacion
   28          | sentencia_if
   29          | sentencia_while
   30          | sentencia_entrada
   31          | sentencia_salida
   32          | sentencia_repeat_until
   33          | sentencia_return_comienzo_lista
   34          | avanzar_retroceder_lista

   35 sentencia_asignacion: IDENTIFICADOR ASIGNACION expresion PUNTO_COMA

   36 sentencia_if: SI ABRE_PAREN expresion CIERRA_PAREN sentencia
   37             | SI ABRE_PAREN expresion CIERRA_PAREN sentencia SINO sentencia

   38 sentencia_while: MIENTRAS ABRE_PAREN expresion CIERRA_PAREN sentencia

   39 sentencia_entrada: LEER lista_leer PUNTO_COMA

   40 lista_leer: IDENTIFICADOR
   41           | lista_leer COMA IDENTIFICADOR
   42           | lista_leer error IDENTIFICADOR

   43 sentencia_salida: ESCRIBIR lista_expresiones_o_cadena PUNTO_COMA

   44 lista_expresiones_o_cadena: expr_cad
   45                           | lista_expresiones_o_cadena COMA expr_cad

   46 expr_cad: expresion
   47         | CADENA

   48 sentencia_repeat_until: REPETIR sentencia HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

   49 sentencia_return_comienzo_lista: DEVOLVER_DOLAR expresion PUNTO_COMA

   50 avanzar_retroceder_lista: expresion DESPLAZA PUNTO_COMA

   51 expresion: ABRE_PAREN expresion CIERRA_PAREN
   52          | MAS_MENOS expresion
   53          | OP_UNARIO expresion
   54          | expresion OP_TERNARIO1 expresion ARROBA expresion
   55          | expresion ARROBA expresion
   56          | expresion OP_BINARIO expresion
   57          | expresion OP_RELACIONAL_IGUALDAD expresion
   58          | expresion OP_RELACIONAL_AND expresion
   59          | expresion OP_RELACIONAL_OR expresion
   60          | expresion OP_RELACIONAL expresion
   61          | expresion MAS_MENOS expresion
   62          | IDENTIFICADOR
   63          | CONSTANTE
   64          | funcion
   65          | agregado_lista
   66          | error

   67 funcion: IDENTIFICADOR ABRE_PAREN lista_f CIERRA_PAREN
   68        | IDENTIFICADOR ABRE_PAREN CIERRA_PAREN

   69 tipo_t: TIPO
   70       | LISTA_DE TIPO

   71 agregado_lista: ABRE_CORCHETE lista CIERRA_CORCHETE

   72 lista_f: expresion
   73        | lista_f COMA expresion

   74 lista: expresion
   75      | lista COMA expresion


Terminals, with rules where they appear

$end (0) 0
error (256) 13 16 21 42 66
DECLARACION (258) 8
FINDECLARACION (259) 8
PRINCIPAL (260) 1
ABRE_LLAVE (261) 3
CIERRA_LLAVE (262) 3
PUNTO_COMA (263) 12 35 39 43 48 49 50
ABRE_PAREN (264) 18 36 37 38 48 51 67 68
CIERRA_PAREN (265) 18 36 37 38 48 51 67 68
DESPLAZA (266) 50
DEVOLVER_DOLAR (267) 49
REPETIR (268) 48
HASTA (269) 48
ASIGNACION (270) 35
SI (271) 36 37
SINO (272) 37
MIENTRAS (273) 38
LEER (274) 39
ESCRIBIR (275) 43
LISTA_DE (276) 70
TIPO (277) 69 70
CONSTANTE (278) 63
IDENTIFICADOR (279) 14 15 16 18 21 23 35 40 41 42 62 67 68
CADENA (280) 47
COMA (281) 15 20 41 45 73 75
ABRE_CORCHETE (282) 71
CIERRA_CORCHETE (283) 71
ARROBA (284) 54 55
OP_RELACIONAL_OR (285) 59
OP_RELACIONAL_AND (286) 58
OP_RELACIONAL_IGUALDAD (287) 57
OP_RELACIONAL (288) 60
MAS_MENOS (289) 52 61
OP_BINARIO (290) 56
OP_UNARIO (291) 53
OP_TERNARIO1 (292) 54


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
programa (39)
    on left: 1, on right: 0
bloque (40)
    on left: 3, on right: 1 7 26
$@1 (41)
    on left: 2, on right: 3
declar_de_subprogs (42)
    on left: 4 5, on right: 3 4
declar_subprograma (43)
    on left: 7, on right: 4
$@2 (44)
    on left: 6, on right: 7
declar_de_variables_locales (45)
    on left: 8 9, on right: 3
variables_locales (46)
    on left: 10 11, on right: 8 10
cuerpo_declar_variables (47)
    on left: 12 13, on right: 10 11
lista_id (48)
    on left: 14 15 16, on right: 12 15 16
cabecera_subprograma (49)
    on left: 18, on right: 7
$@3 (50)
    on left: 17, on right: 18
lista_parametros (51)
    on left: 19 20 21 22, on right: 18 20 21
parametro (52)
    on left: 23, on right: 19 20
sentencias (53)
    on left: 24 25, on right: 3 24
sentencia (54)
    on left: 26 27 28 29 30 31 32 33 34, on right: 24 25 36 37 38 48
sentencia_asignacion (55)
    on left: 35, on right: 27
sentencia_if (56)
    on left: 36 37, on right: 28
sentencia_while (57)
    on left: 38, on right: 29
sentencia_entrada (58)
    on left: 39, on right: 30
lista_leer (59)
    on left: 40 41 42, on right: 39 41 42
sentencia_salida (60)
    on left: 43, on right: 31
lista_expresiones_o_cadena (61)
    on left: 44 45, on right: 43 45
expr_cad (62)
    on left: 46 47, on right: 44 45
sentencia_repeat_until (63)
    on left: 48, on right: 32
sentencia_return_comienzo_lista (64)
    on left: 49, on right: 33
avanzar_retroceder_lista (65)
    on left: 50, on right: 34
expresion (66)
    on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66, on right:
    35 36 37 38 46 48 49 50 51 52 53 54 55 56 57 58 59 60 61 72 73
    74 75
funcion (67)
    on left: 67 68, on right: 64
tipo_t (68)
    on left: 69 70, on right: 12 18 23
agregado_lista (69)
    on left: 71, on right: 65
lista_f (70)
    on left: 72 73, on right: 67 73
lista (71)
    on left: 74 75, on right: 71 75


State 0

    0 $accept: . programa $end

    PRINCIPAL  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PRINCIPAL . bloque

    ABRE_LLAVE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    3 bloque: ABRE_LLAVE . $@1 declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    $default  reduce using rule 2 ($@1)

    $@1  go to state 6


State 4

    1 programa: PRINCIPAL bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    3 bloque: ABRE_LLAVE $@1 . declar_de_variables_locales declar_de_subprogs sentencias CIERRA_LLAVE

    DECLARACION  shift, and go to state 7

    $default  reduce using rule 9 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 8


State 7

    8 declar_de_variables_locales: DECLARACION . variables_locales FINDECLARACION

    error     shift, and go to state 9
    LISTA_DE  shift, and go to state 10
    TIPO      shift, and go to state 11

    variables_locales        go to state 12
    cuerpo_declar_variables  go to state 13
    tipo_t                   go to state 14


State 8

    3 bloque: ABRE_LLAVE $@1 declar_de_variables_locales . declar_de_subprogs sentencias CIERRA_LLAVE

    $default  reduce using rule 5 (declar_de_subprogs)

    declar_de_subprogs  go to state 15


State 9

   13 cuerpo_declar_variables: error .

    $default  reduce using rule 13 (cuerpo_declar_variables)


State 10

   70 tipo_t: LISTA_DE . TIPO

    TIPO  shift, and go to state 16


State 11

   69 tipo_t: TIPO .

    $default  reduce using rule 69 (tipo_t)


State 12

    8 declar_de_variables_locales: DECLARACION variables_locales . FINDECLARACION
   10 variables_locales: variables_locales . cuerpo_declar_variables

    error           shift, and go to state 9
    FINDECLARACION  shift, and go to state 17
    LISTA_DE        shift, and go to state 10
    TIPO            shift, and go to state 11

    cuerpo_declar_variables  go to state 18
    tipo_t                   go to state 14


State 13

   11 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 11 (variables_locales)


State 14

   12 cuerpo_declar_variables: tipo_t . lista_id PUNTO_COMA

    IDENTIFICADOR  shift, and go to state 19

    lista_id  go to state 20


State 15

    3 bloque: ABRE_LLAVE $@1 declar_de_variables_locales declar_de_subprogs . sentencias CIERRA_LLAVE
    4 declar_de_subprogs: declar_de_subprogs . declar_subprograma

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 3
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    LISTA_DE        shift, and go to state 10
    TIPO            shift, and go to state 11
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    declar_subprograma               go to state 35
    cabecera_subprograma             go to state 36
    sentencias                       go to state 37
    sentencia                        go to state 38
    sentencia_asignacion             go to state 39
    sentencia_if                     go to state 40
    sentencia_while                  go to state 41
    sentencia_entrada                go to state 42
    sentencia_salida                 go to state 43
    sentencia_repeat_until           go to state 44
    sentencia_return_comienzo_lista  go to state 45
    avanzar_retroceder_lista         go to state 46
    expresion                        go to state 47
    funcion                          go to state 48
    tipo_t                           go to state 49
    agregado_lista                   go to state 50


State 16

   70 tipo_t: LISTA_DE TIPO .

    $default  reduce using rule 70 (tipo_t)


State 17

    8 declar_de_variables_locales: DECLARACION variables_locales FINDECLARACION .

    $default  reduce using rule 8 (declar_de_variables_locales)


State 18

   10 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 10 (variables_locales)


State 19

   14 lista_id: IDENTIFICADOR .

    $default  reduce using rule 14 (lista_id)


State 20

   12 cuerpo_declar_variables: tipo_t lista_id . PUNTO_COMA
   15 lista_id: lista_id . COMA IDENTIFICADOR
   16         | lista_id . error IDENTIFICADOR

    error       shift, and go to state 51
    PUNTO_COMA  shift, and go to state 52
    COMA        shift, and go to state 53


State 21

   66 expresion: error .

    $default  reduce using rule 66 (expresion)


State 22

   51 expresion: ABRE_PAREN . expresion CIERRA_PAREN

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 55
    funcion         go to state 48
    agregado_lista  go to state 50


State 23

   49 sentencia_return_comienzo_lista: DEVOLVER_DOLAR . expresion PUNTO_COMA

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 56
    funcion         go to state 48
    agregado_lista  go to state 50


State 24

   48 sentencia_repeat_until: REPETIR . sentencia HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 3
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    sentencia                        go to state 57
    sentencia_asignacion             go to state 39
    sentencia_if                     go to state 40
    sentencia_while                  go to state 41
    sentencia_entrada                go to state 42
    sentencia_salida                 go to state 43
    sentencia_repeat_until           go to state 44
    sentencia_return_comienzo_lista  go to state 45
    avanzar_retroceder_lista         go to state 46
    expresion                        go to state 47
    funcion                          go to state 48
    agregado_lista                   go to state 50


State 25

   36 sentencia_if: SI . ABRE_PAREN expresion CIERRA_PAREN sentencia
   37             | SI . ABRE_PAREN expresion CIERRA_PAREN sentencia SINO sentencia

    ABRE_PAREN  shift, and go to state 58


State 26

   38 sentencia_while: MIENTRAS . ABRE_PAREN expresion CIERRA_PAREN sentencia

    ABRE_PAREN  shift, and go to state 59


State 27

   39 sentencia_entrada: LEER . lista_leer PUNTO_COMA

    IDENTIFICADOR  shift, and go to state 60

    lista_leer  go to state 61


State 28

   43 sentencia_salida: ESCRIBIR . lista_expresiones_o_cadena PUNTO_COMA

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    CADENA         shift, and go to state 62
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    lista_expresiones_o_cadena  go to state 63
    expr_cad                    go to state 64
    expresion                   go to state 65
    funcion                     go to state 48
    agregado_lista              go to state 50


State 29

   63 expresion: CONSTANTE .

    $default  reduce using rule 63 (expresion)


State 30

   35 sentencia_asignacion: IDENTIFICADOR . ASIGNACION expresion PUNTO_COMA
   62 expresion: IDENTIFICADOR .
   67 funcion: IDENTIFICADOR . ABRE_PAREN lista_f CIERRA_PAREN
   68        | IDENTIFICADOR . ABRE_PAREN CIERRA_PAREN

    ABRE_PAREN  shift, and go to state 66
    ASIGNACION  shift, and go to state 67

    $default  reduce using rule 62 (expresion)


State 31

   71 agregado_lista: ABRE_CORCHETE . lista CIERRA_CORCHETE

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 68
    funcion         go to state 48
    agregado_lista  go to state 50
    lista           go to state 69


State 32

   52 expresion: MAS_MENOS . expresion

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 70
    funcion         go to state 48
    agregado_lista  go to state 50


State 33

   53 expresion: OP_UNARIO . expresion

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 71
    funcion         go to state 48
    agregado_lista  go to state 50


State 34

   26 sentencia: bloque .

    $default  reduce using rule 26 (sentencia)


State 35

    4 declar_de_subprogs: declar_de_subprogs declar_subprograma .

    $default  reduce using rule 4 (declar_de_subprogs)


State 36

    7 declar_subprograma: cabecera_subprograma . $@2 bloque

    $default  reduce using rule 6 ($@2)

    $@2  go to state 72


State 37

    3 bloque: ABRE_LLAVE $@1 declar_de_variables_locales declar_de_subprogs sentencias . CIERRA_LLAVE
   24 sentencias: sentencias . sentencia

    error           shift, and go to state 21
    ABRE_LLAVE      shift, and go to state 3
    CIERRA_LLAVE    shift, and go to state 73
    ABRE_PAREN      shift, and go to state 22
    DEVOLVER_DOLAR  shift, and go to state 23
    REPETIR         shift, and go to state 24
    SI              shift, and go to state 25
    MIENTRAS        shift, and go to state 26
    LEER            shift, and go to state 27
    ESCRIBIR        shift, and go to state 28
    CONSTANTE       shift, and go to state 29
    IDENTIFICADOR   shift, and go to state 30
    ABRE_CORCHETE   shift, and go to state 31
    MAS_MENOS       shift, and go to state 32
    OP_UNARIO       shift, and go to state 33

    bloque                           go to state 34
    sentencia                        go to state 74
    sentencia_asignacion             go to state 39
    sentencia_if                     go to state 40
    sentencia_while                  go to state 41
    sentencia_entrada                go to state 42
    sentencia_salida                 go to state 43
    sentencia_repeat_until           go to state 44
    sentencia_return_comienzo_lista  go to state 45
    avanzar_retroceder_lista         go to state 46
    expresion                        go to state 47
    funcion                          go to state 48
    agregado_lista                   go to state 50


State 38

   25 sentencias: sentencia .

    $default  reduce using rule 25 (sentencias)


State 39

   27 sentencia: sentencia_asignacion .

    $default  reduce using rule 27 (sentencia)


State 40

   28 sentencia: sentencia_if .

    $default  reduce using rule 28 (sentencia)


State 41

   29 sentencia: sentencia_while .

    $default  reduce using rule 29 (sentencia)


State 42

   30 sentencia: sentencia_entrada .

    $default  reduce using rule 30 (sentencia)


State 43

   31 sentencia: sentencia_salida .

    $default  reduce using rule 31 (sentencia)


State 44

   32 sentencia: sentencia_repeat_until .

    $default  reduce using rule 32 (sentencia)


State 45

   33 sentencia: sentencia_return_comienzo_lista .

    $default  reduce using rule 33 (sentencia)


State 46

   34 sentencia: avanzar_retroceder_lista .

    $default  reduce using rule 34 (sentencia)


State 47

   50 avanzar_retroceder_lista: expresion . DESPLAZA PUNTO_COMA
   54 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   55          | expresion . ARROBA expresion
   56          | expresion . OP_BINARIO expresion
   57          | expresion . OP_RELACIONAL_IGUALDAD expresion
   58          | expresion . OP_RELACIONAL_AND expresion
   59          | expresion . OP_RELACIONAL_OR expresion
   60          | expresion . OP_RELACIONAL expresion
   61          | expresion . MAS_MENOS expresion

    DESPLAZA                shift, and go to state 75
    ARROBA                  shift, and go to state 76
    OP_RELACIONAL_OR        shift, and go to state 77
    OP_RELACIONAL_AND       shift, and go to state 78
    OP_RELACIONAL_IGUALDAD  shift, and go to state 79
    OP_RELACIONAL           shift, and go to state 80
    MAS_MENOS               shift, and go to state 81
    OP_BINARIO              shift, and go to state 82
    OP_TERNARIO1            shift, and go to state 83


State 48

   64 expresion: funcion .

    $default  reduce using rule 64 (expresion)


State 49

   18 cabecera_subprograma: tipo_t . IDENTIFICADOR $@3 ABRE_PAREN lista_parametros CIERRA_PAREN

    IDENTIFICADOR  shift, and go to state 84


State 50

   65 expresion: agregado_lista .

    $default  reduce using rule 65 (expresion)


State 51

   16 lista_id: lista_id error . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 85


State 52

   12 cuerpo_declar_variables: tipo_t lista_id PUNTO_COMA .

    $default  reduce using rule 12 (cuerpo_declar_variables)


State 53

   15 lista_id: lista_id COMA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 86


State 54

   62 expresion: IDENTIFICADOR .
   67 funcion: IDENTIFICADOR . ABRE_PAREN lista_f CIERRA_PAREN
   68        | IDENTIFICADOR . ABRE_PAREN CIERRA_PAREN

    ABRE_PAREN  shift, and go to state 66

    $default  reduce using rule 62 (expresion)


State 55

   51 expresion: ABRE_PAREN expresion . CIERRA_PAREN
   54          | expresion . OP_TERNARIO1 expresion ARROBA expresion
   55          | expresion . ARROBA expresion
   56          | expresion . OP_BINARIO expresion
   57          | expresion . OP_RELACIONAL_IGUALDAD expresion
   58          | expresion . OP_RELACIONAL_AND expresion
   59          | expresion . OP_RELACIONAL_OR expresion
   60          | expresion . OP_RELACIONAL expresion
   61          | expresion . MAS_MENOS expresion

    CIERRA_PAREN            shift, and go to state 87
    ARROBA                  shift, and go to state 76
    OP_RELACIONAL_OR        shift, and go to state 77
    OP_RELACIONAL_AND       shift, and go to state 78
    OP_RELACIONAL_IGUALDAD  shift, and go to state 79
    OP_RELACIONAL           shift, and go to state 80
    MAS_MENOS               shift, and go to state 81
    OP_BINARIO              shift, and go to state 82
    OP_TERNARIO1            shift, and go to state 83


State 56

   49 sentencia_return_comienzo_lista: DEVOLVER_DOLAR expresion . PUNTO_COMA
   54 expresion: expresion . OP_TERNARIO1 expresion ARROBA expresion
   55          | expresion . ARROBA expresion
   56          | expresion . OP_BINARIO expresion
   57          | expresion . OP_RELACIONAL_IGUALDAD expresion
   58          | expresion . OP_RELACIONAL_AND expresion
   59          | expresion . OP_RELACIONAL_OR expresion
   60          | expresion . OP_RELACIONAL expresion
   61          | expresion . MAS_MENOS expresion

    PUNTO_COMA              shift, and go to state 88
    ARROBA                  shift, and go to state 76
    OP_RELACIONAL_OR        shift, and go to state 77
    OP_RELACIONAL_AND       shift, and go to state 78
    OP_RELACIONAL_IGUALDAD  shift, and go to state 79
    OP_RELACIONAL           shift, and go to state 80
    MAS_MENOS               shift, and go to state 81
    OP_BINARIO              shift, and go to state 82
    OP_TERNARIO1            shift, and go to state 83


State 57

   48 sentencia_repeat_until: REPETIR sentencia . HASTA ABRE_PAREN expresion CIERRA_PAREN PUNTO_COMA

    HASTA  shift, and go to state 89


State 58

   36 sentencia_if: SI ABRE_PAREN . expresion CIERRA_PAREN sentencia
   37             | SI ABRE_PAREN . expresion CIERRA_PAREN sentencia SINO sentencia

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 90
    funcion         go to state 48
    agregado_lista  go to state 50


State 59

   38 sentencia_while: MIENTRAS ABRE_PAREN . expresion CIERRA_PAREN sentencia

    error          shift, and go to state 21
    ABRE_PAREN     shift, and go to state 22
    CONSTANTE      shift, and go to state 29
    IDENTIFICADOR  shift, and go to state 54
    ABRE_CORCHETE  shift, and go to state 31
    MAS_MENOS      shift, and go to state 32
    OP_UNARIO      shift, and go to state 33

    expresion       go to state 91
    funcion         go to state 48
    agregado_lista  go to state 50


State 60

   40 lista_leer: IDENTIFICADOR .

    $default  reduce using rule 40 (lista_leer)


State 61

   39 sentencia_entrada: LEER lista_leer . PUNTO_COMA
   41 lista_leer: lista_leer . COMA IDENTIFICADOR
   42           | lista_leer . error IDENTIFICADOR

    error       shift, and go to state 92
    PUNTO_COMA  shift, and go to state 93
    COMA        shift, and go to state 94


State 62

   47 expr_cad: CADENA .

    $default  reduce using rule 47 (expr_cad)


State 63

   43 sentencia_salida: ESCRIBIR lista_expresiones_o_cadena . PUNTO_COMA
   45 lista_expresiones_o_cadena: lista_expresiones_o_cadena . COMA expr_cad

    PUNTO_COMA  shift, and go to state 95
    COMA        shift, and go to state 96


State 64

   44 lista_expresiones_o_cadena: expr_cad .

    $default  reduce using rule 44 (lista_expresiones_o_cadena)


State 65
